# app/controllers/passengers/resetPassword.js
@@ -8,11 +8,21 @@ const ResetPassengersPassword = async function (request, response) {
         "apiKeyAuth": []
     }] 
     */
+  /*
+   #swagger.requestBody = {
+    required: true,
+    in: 'body',
+    description: 'Create passenger profile',
+    schema: {
+      $ref: '#/definitions/resetPasswordPayload'
+    }
+   }
+   */
   const { email, phoneNumber = '' } = request.body
   try {
     const result = await ResetPassword({ email, phoneNumber })
-    console.log(result)
-    response.status(200).json({ message: 'todo' })
+
+    response.status(200).json({ message: 'success', result })
   } catch (err) {
     console.log(err)
     response.status(401).json({ message: 'Unauthorized' })
