# swagger.json
@@ -224,7 +224,24 @@
           {
             "apiKeyAuth": []
           }
-        ]
+        ],
+        "requestBody": {
+          "required": true,
+          "in": "body",
+          "description": "Create passenger profile",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/resetPasswordPayload"
+              }
+            },
+            "application/xml": {
+              "schema": {
+                "$ref": "#/components/schemas/resetPasswordPayload"
+              }
+            }
+          }
+        }
       }
     },
     "/api/v1/passengers/profile/": {
@@ -533,7 +550,7 @@
           },
           "email": {
             "type": "string",
-            "example": "test@test.com"
+            "example": "lild93078@gmail.com"
           },
           "country": {
             "type": "string",
@@ -694,12 +711,44 @@
           "name": "passengersProfile"
         }
       },
+      "passengersNewDetails": {
+        "type": "object",
+        "properties": {
+          "Cars": {
+            "type": "array",
+            "items": {
+              "type": "object",
+              "properties": {
+                "carName": {
+                  "type": "string",
+                  "example": "Hunda"
+                },
+                "carBrand": {
+                  "type": "string",
+                  "example": "Toyota"
+                },
+                "type": {
+                  "type": "string",
+                  "example": "SUV"
+                },
+                "plateNumber": {
+                  "type": "string",
+                  "example": "ABC123"
+                }
+              }
+            }
+          }
+        },
+        "xml": {
+          "name": "passengersNewDetails"
+        }
+      },
       "login": {
         "type": "object",
         "properties": {
           "email": {
             "type": "string",
-            "example": "test@test.com"
+            "example": "lild93078@gmail.com"
           },
           "password": {
             "type": "string",
@@ -712,6 +761,21 @@
         ],
         "xml": {
           "name": "login"
+        }
+      },
+      "resetPasswordPayload": {
+        "type": "object",
+        "properties": {
+          "email": {
+            "type": "string",
+            "example": "lild93078@gmail.com"
+          }
+        },
+        "required": [
+          "email"
+        ],
+        "xml": {
+          "name": "resetPasswordPayload"
         }
       }
     }
